[tool.poetry]
name = "replit"
version = "2.0.0"
description = "A library for interacting with features of repl.it"
authors = ["mat <pypi@matdoes.dev>", "Scoder12 <pypi@scoder12.ml>", "AllAwesome497", "Repl.it <contact@repl.it>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/replit/replit-py"
homepage = "https://github.com/replit/replit-py"
documentation = "https://replit-python-docs.scoder12.repl.co"

[tool.poetry.dependencies]
python = "^3.8"
typing_extensions = "^3.7.4"
flask = "^1.1.2"
werkzeug = "^1.0.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
darglint = "^1.5.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
black = "^19.10b0"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"
sphinx = "^3.1.2"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-rtd-theme = "^0.5.0"
coverage = "^5.2.1"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
