[tool.poetry]
name = "replit"
version = "3.3.0"
description = "A library for interacting with features of repl.it"
authors = ["Repl.it <contact@repl.it>", "mat <pypi@matdoes.dev>", "kennethreitz <me@kennethreitz.org>", "Scoder12 <pypi@scoder12.ml>", "AllAwesome497", ]
license = "ISC"
readme = "README.md"
repository = "https://github.com/replit/replit-py"
homepage = "https://github.com/replit/replit-py"
documentation = "https://replit-py.readthedocs.org/"

[tool.poetry.dependencies]
python = "^3.8"
typing_extensions = "^4"
Flask = "^2.0.0"
Werkzeug = "^2.0.0"
aiohttp = "^3.6.2"
requests = "^2.25.1"
pyseto = "^1.6.11"
protobuf = "^4.21.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
darglint = "^1.5.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
black = "^19.10b0"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"
sphinx = "^3.1.2"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-rtd-theme = "^0.5.0"
coverage = "^5.2.1"
mypy = "^0.782"
sphinx-autobuild = "^2020.9.1"
sphinx-click = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
replit = "replit.__main__:cli"

[tool.mypy]
exclude = [
	"_pb2.py$",  # Generated code
]
