[tool.poetry]
name = "replit"
version = "0.0.0"  # Set by GitHub Actions
description = "A library for interacting with features of Replit"
authors = ["Replit <contact@replit.com>", "mat <pypi@matdoes.dev>", "kennethreitz <me@kennethreitz.org>", "Scoder12 <pypi@scoder12.ml>", "AllAwesome497", ]
license = "ISC"
readme = "README.md"
repository = "https://github.com/replit/replit-py"
homepage = "https://github.com/replit/replit-py"
documentation = "https://replit-py.readthedocs.org/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typing_extensions = "^4"
Flask = ">=3.1.0"
Werkzeug = ">=3,<4"
aiohttp = ">=3.10.11"
requests = "^2.25.1"
pyseto = "^1.6.11"
protobuf = "^4.21.8"
urllib3 = ">=1.26,<3"
aiohttp-retry = "^2.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0.0"
darglint = ">=1.5.2"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=20.1.4"
black = ">=23.3.0"
flake8-black = ">=0.2.1"
flake8-import-order = ">=0.18.1"
flake8-annotations = ">=2.3.0"
flake8-docstrings = ">=1.5.0"
mypy = ">=1.5.0"
coverage = ">=5.2.1"
types-requests = "^2.31.0.10"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.1"
sphinx-autobuild = ">=2024.10.3"
starlette = ">=0.40.0"
sphinx-autodoc-typehints = ">=1.11.0"
sphinx-click = ">=4.4.0"
sphinx-rtd-theme = ">=0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
replit = "replit.__main__:cli"

[tool.mypy]
exclude = [
	"_pb2.py$",  # Generated code
]

[tool.black]
exclude = "src/replit/goval/api"
